src/main/java/semantic/symbolTable/test/passing/att.ru
struct A {
    pri Int a;
    Array Bool b;
    Int c;
    Int alteraOrden;
}

impl A {.(Object c){Bool a; (IO.out_str("hola"));}}

start{}