src/main/java/semantic/symbolTable/test/failing/redefinedInheritedAttribute.ru
struct B : A {
	Str a;
}

struct A {
	pri Int a;
}

impl B   {
	.() {}
}

impl A  {
	.() {}
}

start {
}